--- a/app/package.json
+++ b/app/package.json
@@ -7,14 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^9.0.0",
     "expo": "^32.0.2-rc.0",
+    "native-base": "^2.10.0",
     "react": "16.6.3",
     "react-native": "0.58.1",
     "react-native-camera": "^1.9.2",
     "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.13.3",
     "react-native-image-base64": "^0.1.3",
-    "react-native-router-flux": "^4.0.6"
+    "react-native-router-flux": "^4.0.6",
+    "react-timer-mixin": "^0.13.4"
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge.0",
